layers literacy and mortality added to live_map to be reviewed

--- a/Live_Map/index.html
+++ b/Live_Map/index.html
@@ -34,7 +34,8 @@
     <script type="text/javascript" src="static/js/config.js"></script>
     
     <!-- Our JavaScript -->
-    <script type="text/javascript" src="static/js/map_logic.js"></script>
+    <script type="text/javascript" src="static/js/countries.js"></script>
+    <script type="text/javascript" src="static/js/logic.js"></script>
 
 
 </body>
