--- a/site/index.html
+++ b/site/index.html
@@ -105,8 +105,8 @@
                 <li><p class="">In two cases (Alcohol and Mortality Rates) the various years were not represented by columns. Rather, they were all in one column with the data spread out after in columns. This presented a problem as the data needed to be columned. The beginning is shown below.</p></li>
               </ul>
               <div class="row">
-              <img src="pictures/alcohol_dataframe_1.png" class="m-5 col img-thumbnail " alt="...">
-              <img src="pictures/mortality_dataframe_1.png" class="m-5 col img-thumbnail " alt="...">
+              <img src="pictures/img/alcohol_dataframe_1.png" class="m-5 col img-thumbnail " alt="...">
+              <img src="pictures/img/mortality_dataframe_1.png" class="m-5 col img-thumbnail " alt="...">
                 </div>
             </div>
 
@@ -122,8 +122,8 @@
             <div class="list-group-item">
               <h5>The end results were transformed dataframes usable for machine learning</h5>
               <div class="row">
-                <img src="pictures/alcohol_dataframe_2.png" class=" m-5 col img-thumbnail " alt="...">
-                <img src="pictures/mortality_dataframe_2.png" class="m-5 col img-thumbnail " alt="...">
+                <img src="pictures/img/alcohol_dataframe_2.png" class=" m-5 col img-thumbnail " alt="...">
+                <img src="pictures/img/mortality_dataframe_2.png" class="m-5 col img-thumbnail " alt="...">
               </div>
             </div>
             <div class="list-group-item">
@@ -144,7 +144,7 @@
                 <li><p class="">The above breakpoints were chosen as it produces a reasonable distribution of data between the bins.</p></li>
               </ul>
               <div class="row">
-                <img src="pictures/mortality_state_breakpoints.png" class=" m-5 col img-thumbnail " alt="...">
+                <img src="pictures/img/mortality_state_breakpoints.png" class=" m-5 col img-thumbnail " alt="...">
               </div>
             </div>
             <div class="list-group-item">
@@ -171,7 +171,7 @@
                         <img class="rounder" src="pictures/img/andrea.jpg"/>
                         <div class="middle" style="cursor: pointer;"
                              onclick="window.location='https://github.com/andrealynn8201';">
-                            <!--          <img class="github" src="pictures/img/github.jpg"/>-->
+                            <!--          <img class="github" src="../pictures/img/github.jpg"/>-->
                             <div class="text"><a class="no-link" href="https://github.com/andrealynn8201">Andrea</a>
                             </div>
                         </div>
@@ -180,7 +180,7 @@
                         <img class="rounder" src="pictures/img/cwilkis.jpg"/>
                         <div class="middle" style="cursor: pointer;"
                              onclick="window.location='https://github.com/cwilkis';">
-                            <!--          <img class="github" src="pictures/img/github.jpg"/>-->
+                            <!--          <img class="github" src="../pictures/img/github.jpg"/>-->
                             <div class="text"><a class="no-link" href="https://github.com/cwilkis">Claudia</a></div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                         <img class="rounder" src="pictures/img/joe.png"/>
                         <div class="middle" style="cursor: pointer;"
                              onclick="window.location='https://github.com/JleMxe';">
-                            <!--          <img class="github" src="pictures/img/github.jpg"/>-->
+                            <!--          <img class="github" src="../pictures/img/github.jpg"/>-->
                             <div class="text"><a class="no-link" href="https://github.com/JleMxe">Joe</a></div>
                         </div>
                     </div>
@@ -196,7 +196,7 @@
                         <img class="rounder" src="pictures/img/stephen.jpg"/>
                         <div class="middle" style="cursor: pointer;"
                              onclick="window.location='https://www.github.com/stephendini/';">
-                            <!--          <img class="github" src="pictures/img/github.jpg"/>-->
+                            <!--          <img class="github" src="../pictures/img/github.jpg"/>-->
                             <div class="text">
                                 <a class="no-link" href="https://www.github.com/stephendini/">Stephen</a></div>
                         </div>
