--- a/site/main_point.html
+++ b/site/main_point.html
@@ -12,8 +12,8 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="">
+  <link rel="apple-touch-icon" href="">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
@@ -58,12 +58,12 @@
     </div>
   </nav>
 <!-- Add your site or application content here -->
-  <div class="container padding tophead">
+  <div class="container">
 
     <div class="row">
       <div class="col-md-12 jumbotron jumbotron-fluid text-center">
-        <h1>Fancy Title</h1>
-        <p>Explainer of the date being presented.</p>
+        <h1>Mortality broken down by Religion</h1>
+        <p id="mortality"></p>
       </div>
     </div>
     <br>
@@ -72,7 +72,8 @@
         <div class="card">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <label for="selDataset" class="sr-only"></label><select id="selDataset"
+                                                                  onchange="optionChanged(this.value)"></select>
         </div>
         <div class="card">
           <div class="card-header">
@@ -81,12 +82,12 @@
           <div id="sample-metadata" class="card-body"></div>
         </div>
       </div>
-      <div class="col-md">
+      <div class="col">
         <div id="bar-plot" class="font_choice"></div>
       </div>
-      <div class="col-md">
-        <div id="gauge-plot" class="font_choice"></div>
-      </div>
+      <!--      <div class="col">-->
+      <!--        <div id="gauge-plot" class="font_choice"></div>-->
+      <!--      </div>-->
     </div>
     <br>
     <div class="row">
@@ -141,14 +142,20 @@
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="js/chart.js"></script>
+  <script src="https://cdn.plot.ly/plotly-2.12.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+          integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+          integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+          crossorigin="anonymous"></script>
+  <!--  <script src="js/chart.js"></script>-->
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/chart.js"></script>
+  <script src="https://kit.fontawesome.com/aa26a1b17b.js" crossorigin="anonymous"></script>
 
 </body>
 
